fix post layout bug

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -181,6 +181,14 @@ pre {
     }
 }
 
+@mixin clearfix {
+  &:after {
+      content: "";
+      display: table;
+      clear: both;
+  }  
+}
+
 
 
 /**
